--- a/templates/index.html
+++ b/templates/index.html
@@ -17,8 +17,8 @@
 </head>
 <body>
 <div class="content">
-    <img src="/static/shipped.png" width="100px" />
-	<h3>Shipped Three-Tier Demo Application</h3>
+    <img src="/static/shipped.png" width="100%" />
+	<h3>Shipped Mongo DB client APP</h3>
 	<br/>
 	<p>Cisco Shipped has <span id="counter">{{count}}</span> <span id="likes">likes.</span></p>
 	<br><br>
