--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>Shipped Three-Tier Demo Application</title>
+	<title>Shipped Mongo DB client APP</title>
 	
 	<style>
 		body{
